<resources>
    <string name="app_name">Slovenský rybársky klub</string>
    <string name="title_activity_login">Prihásenie</string>
    <string name="title_activity_add_catch">Pridať odchyt</string>

    <string name="login_activity_nickname_placeholder">Prihlasovacie meno</string>
    <string name="login_activity_password_placeholder">Heslo</string>
    <string name="login_activity_login_button_text">Prihlásiť</string>
    <string name="login_activity_connection_indicator_text">Internetové pripojenie:</string>
    <string name="login_activity_remember_login_text">Zapamätať prihlásenie</string>

    <string name="add_catch_menu_logoff_text">Odhlásiť</string>
    <string name="add_catch_form_date_placeholder">* Dátum a čas</string>
    <string name="add_catch_form_fisher_placeholder">* Lovec</string>
    <string name="add_catch_form_fish_placeholder">* Ryba</string>
    <string name="add_catch_form_condition_placeholder">* Celkový stav</string>
    <string name="add_catch_form_condition_description_placeholder">* Celkový stav a kondácia (popis)</string>
    <string name="add_catch_form_location_placeholder">* Poloha</string>
    <string name="add_catch_form_weight_placeholder">* Váha (kg)</string>
    <string name="add_catch_form_length_placeholder">* Dĺžka (cm)</string>
    <string name="add_catch_form_height_placeholder">Výška (cm)</string>
    <string name="add_catch_form_circuit_placeholder">Obvod (cm)</string>
    <string name="add_catch_form_trap_placeholder">Nástraha</string>
    <string name="add_catch_form_notes_placeholder">Poznámka</string>
    <string name="add_catch_form_left_head_photo_placeholder">Fotka hlavy zľava</string>
    <string name="add_catch_form_right_head_photo_placeholder">Fotka hlavy sprava</string>
    <string name="add_catch_form_optional_photos_placeholder">Ostatné fotky</string>
    <string name="add_catch_button_text">Pridať odchyt</string>

    <string name="add_catch_confirm_map_location_button_text">Potvrdiť</string>
    <string name="add_catch_map_instructions_text">Značku môžete premiestňovať po jej dlhom podržaní.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_text_navigation">textNavigationActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
