<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/photoInputs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rightHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/border"
        android:padding="8dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/rightHeadPhotoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_catch_form_right_head_photo_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/rightHeadPhoto"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rightHeadPhotoText"
            app:srcCompat="@drawable/image_input" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/leftHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/border"
        android:padding="8dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/leftHeadPhotoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_catch_form_left_head_photo_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/leftHeadPhoto"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/leftHeadPhotoText"
            app:srcCompat="@drawable/image_input" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/optionalPhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/optionalPhotosText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_catch_form_optional_photos_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/optionalPhotosList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/optionalPhotosText">

        </LinearLayout>

        <ImageView
            android:id="@+id/optionalPhotoInput"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/optionalPhotosList"
            app:srcCompat="@drawable/image_input" />

    </android.support.constraint.ConstraintLayout>

</android.widget.LinearLayout>